--- a/shopping-app/src/app/components/cart/section-two/section-two.component.html
+++ b/shopping-app/src/app/components/cart/section-two/section-two.component.html
@@ -1,8 +1,8 @@
 <section class="cart-head container-fluid">
   <div class="container">
     <ul>
-      <li>1. Shopping Cart</li>
-      <li class="active">2. Shipping Details</li>
+      <li routerLink="/cart">1. Shopping Cart</li>
+      <li routerLink="/ship" class="active">2. Shipping Details</li>
       <li>3. Payment Options</li>
     </ul>
   </div>
@@ -16,24 +16,49 @@
       </p>
       <div class="form-details">
         <form>
-          <input type="text" class="firstName" placeholder="First Name" />
-          <input type="text" class="secondName" placeholder="Last Name" />
-          <input type="text" class="address1" placeholder="Address" />
+          <input
+            type="text"
+            required
+            class="firstName"
+            placeholder="First Name"
+          />
+          <input
+            type="text"
+            required
+            class="secondName"
+            placeholder="Last Name"
+          />
+          <input type="text" class="address1" placeholder="Address" required />
 
-          <input type="text" class="address2" placeholder="Address 2" />
-          <select name="" class="country" id="">
+          <input
+            type="text"
+            class="address2"
+            placeholder="Address 2"
+            required
+          />
+          <select name="" class="country" id="" required>
             <option value="">Country</option>
             <option value="">India</option>
             <option value="">Canada</option>
           </select>
-          <input type="text" class="city" placeholder="City" />
-          <input type="text" class="zip" placeholder="Zip/Postal Code" />
-          <input type="text" class="phone" placeholder="Phone Number" />
+          <input type="text" class="city" required placeholder="City" />
+          <input
+            type="text"
+            class="zip"
+            required
+            placeholder="Zip/Postal Code"
+          />
+          <input
+            type="text"
+            class="phone"
+            required
+            placeholder="Phone Number"
+          />
         </form>
 
         <div class="delivery-type">
           <div class="free">
-            <input type="radio" checked name="" id="" />
+            <input type="radio" checked name="delivery" id="" />
             <div class="label">
               <label for="">Free Delivery </label>
 
@@ -41,7 +66,7 @@
             </div>
           </div>
           <div class="not-free">
-            <input type="radio" name="" id="" />
+            <input type="radio" name="delivery" id="" />
             <div class="label">
               <label for="">Next Day Delivery - $20 </label>
               <span>24hrs from checkout</span>
@@ -50,33 +75,40 @@
         </div>
       </div>
       <div class="btns">
-        <button routerLink="/payment" class="next btn">Next</button>
+        <button type="submit" routerLink="/payment" class="next btn">
+          Next
+        </button>
         <button routerLink="/home" class="Cancel btn">Cancel</button>
       </div>
     </div>
     <div class="cart-summary">
       <p>Summary</p>
 
-      <div class="product">
-        <img src="product.imageUrl" alt=" Product image" />
+      <div *ngFor="let item of cartList" class="product">
+        <img [src]="item.imageUrl" alt=" Product image" />
         <div class="product-detail">
           <h4>
-            Product-Name
+            {{ item.name }}
           </h4>
-          <span>$300</span>
+          <span>{{ item.price | currency: "INR" }}</span>
         </div>
       </div>
 
       <input type="text" placeholder="ENTER COUPON CODE" />
 
       <div class="cart-total">
-        <div class="total"><span>SUBTOTAL</span><span>$600</span></div>
+        <div class="total">
+          <span>SUBTOTAL</span
+          ><span>{{ getTotalPrice() | currency: "INR" }}</span>
+        </div>
         <div class="total"><span>SHIPPING</span><span>FREE</span></div>
-        <div class="total"><span>TAXES</span><span>$13</span></div>
+        <div class="total">
+          <span>TAXES</span><span>{{ totalprice / 50 | currency: "INR" }}</span>
+        </div>
       </div>
       <div class="total final-total">
         <span>TOTAL</span>
-        <span>$613</span>
+        <span>{{ totalprice + totalprice / 50 | currency: "INR" }}</span>
       </div>
     </div>
   </div>
