--- a/shopping-app/src/app/components/final/final.component.html
+++ b/shopping-app/src/app/components/final/final.component.html
@@ -5,6 +5,6 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam saepe odio
       quo, corrupti nihil praesentium!
     </p>
-    <button class="continue-shop">Continue Shopping</button>
+    <button routerLink="/home" class="continue-shop">Continue Shopping</button>
   </div>
 </section>
