--- a/shopping-app/src/app/components/product-description/product-description.component.scss
+++ b/shopping-app/src/app/components/product-description/product-description.component.scss
@@ -103,6 +103,7 @@
     .person-review {
       display: grid;
       grid-template-columns: 2fr 6fr;
+      gap: 1rem;
       margin: 2rem 0;
       position: relative;
 
@@ -128,6 +129,55 @@
         font-size: 0.9rem;
         line-height: 1.2rem;
         letter-spacing: 0.5px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .product-info {
+    .container {
+      grid-template-columns: 1fr;
+      .img-div {
+        width: 100%;
+        height: 350px;
+      }
+      .product-describe {
+        padding: 1rem;
+        .title {
+          font-size: 1.6rem;
+        }
+        .price-model {
+          font-size: 1.3rem;
+          select {
+            width: 120px;
+          }
+        }
+      }
+    }
+  }
+  .reviews {
+    .container {
+      padding: 1.5rem;
+      .person-review {
+        .person {
+          margin: 0;
+          .fas {
+            margin: 0;
+            margin-right: 1rem;
+            margin-bottom: auto;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .reviews {
+    .container {
+      .person-review {
+        grid-template-columns: 1fr;
       }
     }
   }
