--- a/shopping-app/src/app/components/cart/section-three/section-three.component.scss
+++ b/shopping-app/src/app/components/cart/section-three/section-three.component.scss
@@ -11,12 +11,14 @@
       .active {
         color: dimgray;
         border-bottom-color: dimgray;
+        transition: all 1s ease;
       }
       li {
         text-align: center;
         border-bottom: 1px solid lightgray;
         padding-bottom: 1rem;
         color: lightgray;
+        cursor: pointer;
       }
     }
   }
@@ -184,6 +186,91 @@
         margin-top: 0.9rem;
         color: var(--gray-color);
         font-weight: 100;
+      }
+    }
+  }
+}
+
+@media (max-width: 1101px) {
+  .payment {
+    .container {
+      gap: 1.5rem;
+      padding: 2rem 1.5rem;
+      margin: auto;
+    }
+  }
+}
+
+@media (max-width: 1040px) {
+  .payment {
+    .container {
+      .payment-details {
+        .credit-card {
+          .cc-name {
+            .card-details {
+              grid-template-columns: 1fr 1fr;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 786px) {
+  .payment {
+    .container {
+      grid-template-columns: 1fr;
+      .payment-details {
+        .credit-card {
+          .cc-name {
+            .card-details {
+              grid-template-columns: 2fr 1fr 1fr;
+              .setWidth {
+                width: 164px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 700px) {
+  .payment {
+    .container {
+      grid-template-columns: 1fr;
+      padding: 2rem 1rem;
+      .payment-details {
+        .credit-card {
+          .cc-name {
+            .card-details {
+              grid-template-columns: 1fr 1fr;
+              .setWidth {
+                width: 100%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 520px) {
+  .payment {
+    .container {
+      grid-template-columns: 1fr;
+      padding: 2rem 1rem;
+      .payment-details {
+        .credit-card {
+          .cc-name {
+            padding: 1rem;
+            .card-details {
+              grid-template-columns: 1fr;
+            }
+          }
+        }
       }
     }
   }
