--- a/shopping-app/src/app/components/navbar/navbar.component.html
+++ b/shopping-app/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,14 @@
 <section class="navbar container-fluid">
   <div class="container">
     <ul>
-      <li routerLink="/home">Home</li>
+      <li class="active" routerLink="/home">Home</li>
       <li>About</li>
       <li>Shop</li>
       <li>Help</li>
-      <li routerLink="/cart"><i class="fas fa-shopping-cart"></i>Your Cart</li>
+      <li routerLink="/cart">
+        <i class="fas fa-shopping-cart"></i
+        ><span>{{ cartList.length }}</span> Your Cart
+      </li>
     </ul>
   </div>
 </section>
