--- a/shopping-app/src/app/components/home/home.component.html
+++ b/shopping-app/src/app/components/home/home.component.html
@@ -31,7 +31,7 @@
       <div class="product" *ngFor="let product of products; index as i">
         <div class="image-container">
           <img
-            src="{{ product.imageUrl }}"
+            [src]="product.imageUrl"
             [routerLink]="['/product-description', product.id]"
             alt=" Product image"
           />
